changed readme, reorganized resume

--- a/index.html
+++ b/index.html
@@ -4,26 +4,38 @@
 <div class="resume">
     <p id="result" class="banner">Loading...</p>
         <h2 class="center-text">Darius Daugherty</h2>
-  <p class="center-text"><a href="mailto:dariusid08@gmail.com?subject=From%20cloud%20resume%20site">dariusid08@gmail.com</a></p>
+    <p class="center-text"><a href="mailto:dariusid08@gmail.com?subject=From%20cloud%20resume%20site">dariusid08@gmail.com</a></p>
     <p class="center-text">(213)-300-3141</p>
-        <p class="center-text"><strong>Solutions Architect</strong></p>
+    <p class="center-text"><a href="https://github.com/dariusgatsby" target="_blank">GitHub</a></p> <!-- Add your GitHub link here -->
+    <p class="center-text"><a href="https://www.linkedin.com/in/darius-daugherty/" target="_blank">LinkedIn</a></p> <!-- Add your LinkedIn link here -->
+    <p class="center-text"><strong>DevOps Engineer/Solutions Architect</strong></p>
 
         <h1>Professional Summary</h1>
-        <p class="indented">As an aspiring Solutions Architect in the AWS environment with a Security+ certification and AWS Solutions Architect Associate. I bring a unique blend of cloud expertise and cybersecurity knowledge to the table. My passion lies in leveraging technology to solve complex business challenges. With experience as a lead expeditor in a high-pressure kitchen, I've honed my communication skills, enabling me to effectively collaborate and translate technical solutions into actionable business strategies. I am committed to designing and implementing secure, efficient, and scalable AWS solutions that drive success for organizations while ensuring the highest level of data protection and compliance. As a life-long learner I hope to continually improve myself and the people around me.</p>
+        <p class="indented">DevOps engineer and Solutions Architect with experience with scripting languages, containerization, container orchestration.I have strong problem solving skills and love to work hard and learn from the people around me. I am proficient with cloud technologies and well-architected principles.</p>
 
-        <h1>Skills</h1>
+        <h1> Technical Skills</h1>
         <ul>
-            <li>Task Prioritization and Time Management</li>
-            <li>Communication with team and stakeholders</li>
-            <li>Active Listening</li>
-          <li>Foundational Python</li>
-          <li>AWS Core Services</li>
-          <li>Cybersecurity Principles</li>
-            <li>Well Architected Frameworks</li>
+            <li>Amazon Web Services</li>
+            <li>Containerization: Docker, Docker Swarm, ECS, (Learning Kubernetes now!) </li>
+            <li>Python and Linux</li>
+          <li>Github Actions</li>
+          <li>Version Control: Git</li>
+            <li>Multipass for developer enviroments</li>
         </ul>
+  <h1>Projects</h1>
+    <ul>
+        <li>
+            <p><strong>Serverless Resume Hosting</strong></p>
+            <p class="indented">Built serverless components using AWS Lambda, API Gateway, and DynamoDB to host and track resume visits. Developed skills in Python, JavaScript, and AWS SDK (boto3). Added source code to Github repo for remote development and CI testing with GitHub actions. The link is this website!</p>
+        </li>
+      <li>
+        <p><strong>Web Federation Project</strong></p>
+        <p class="indented">Implemented a web federation project incorporating Amazon Cognito and Google API. Check out the project on <a href="https://github.com/dariusgatsby/aws-web-fed-project" target="_blank">GitHub</a>.</p>
+    </li>
+  </ul>
 
         <h1>Work Experience</h1>
-    <ul>
+        <ul>
         <li>
             <p><strong>Bacari Silverlake</strong></p>
             <p>Lead Expo | 2021 - December 2023</p>
