--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <li>Amazon Web Services</li>
             <li>Containerization: Docker, Docker Swarm, ECS, (Learning Kubernetes now!) </li>
             <li>Python and Linux</li>
-          <li>Github Actions</li>
+          <li>Networking</li>
           <li>Version Control: Git</li>
             <li>Multipass for developer enviroments</li>
         </ul>
