--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <p class="center-text"><strong>DevOps Engineer/Solutions Architect</strong></p>
 
         <h1>Professional Summary</h1>
-        <p class="indented">DevOps engineer and Solutions Architect with experience with scripting languages, containerization, container orchestration.I have strong problem solving skills and love to work hard and learn from the people around me. I am proficient with cloud technologies and well-architected principles.</p>
+        <p class="indented">DevOps engineer and Solutions Architect with experience with scripting languages, containerization, and container orchestration. I have strong problem solving skills that are growing each day, I also love to work with people, and learn from the people around me. I am proficient with cloud technologies and well-architected principles.</p>
 
         <h1> Technical Skills</h1>
         <ul>
