--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
     <ul>
         <li>
             <p><strong>Serverless Resume Hosting</strong></p>
-            <p class="indented">Built serverless components using AWS Lambda, API Gateway, and DynamoDB to host and track resume visits. Developed skills in Python, JavaScript, and AWS SDK (boto3). Added source code to Github repo for remote development and CI testing with GitHub actions. The link is this website!</p>
+            <p class="indented">Built serverless components using AWS Lambda, API Gateway, and DynamoDB to host and track resume visits. Developed skills in Python, JavaScript, and AWS SDK (boto3). Added source code to Github repo for remote development and CI testing with GitHub actions. Check out the Github repo!<a href="https://github.com/dariusgatsby/cloudresume" target="_blank">Github</a></p>
         </li>
       <li>
         <p><strong>Web Federation Project</strong></p>
