--- a/index.html
+++ b/index.html
@@ -16,20 +16,21 @@
         <h1> Technical Skills</h1>
         <ul>
             <li>Amazon Web Services</li>
-            <li>Containerization: Docker, Docker Swarm, ECS, (Learning Kubernetes now!) </li>
-            <li>Python and Linux</li>
+            <li>Containerization: Docker, Docker Swarm, ECS</li>
+            <li>Python </li>
+            <li>Linux</li>
           <li>Networking</li>
-          <li>Version Control: Git</li>
-            <li>Multipass for developer enviroments</li>
+          <li>Git</li>
+            <li>Multipass</li>
         </ul>
   <h1>Projects</h1>
     <ul>
         <li>
-            <p><strong>Serverless Resume Hosting</strong></p>
+            <p><strong>Cloud Resume Challenge</strong></p>
             <p class="indented">Built serverless components using AWS Lambda, API Gateway, and DynamoDB to host and track resume visits. Developed skills in Python, JavaScript, and AWS SDK (boto3). Added source code to Github repo for remote development and CI testing with GitHub actions. Check out the Github repo!<a href="https://github.com/dariusgatsby/cloudresume" target="_blank">Github</a></p>
         </li>
       <li>
-        <p><strong>Web Federation Project</strong></p>
+        <p><strong>Web Identity Federation Project</strong></p>
         <p class="indented">Implemented a web federation project incorporating Amazon Cognito and Google API. Check out the project on <a href="https://github.com/dariusgatsby/aws-web-fed-project" target="_blank">GitHub</a>.</p>
     </li>
   </ul>
